--- a/mitigacion.html
+++ b/mitigacion.html
@@ -118,6 +118,7 @@
           <a href="riesgo.html" class="navbar-link">Riesgo</a>
           <a href="amenazas.html" class="navbar-link">Amenazas</a>
           <a href="impactos.html" class="navbar-link">Impactos</a>
+          <a href="clima.html" class="navbar-link">Clima</a>
           <a href="escenarios_clima.html" class="navbar-link">Escenarios Climáticos</a>
           <a href="acciones-climaticas.html" class="navbar-link">Acciones Climáticas</a>
           <a href="mitigacion.html" class="navbar-link active">Mitigación</a>
